[tool.poetry]
name = "dogelib"
version = "0.1.0"
description = ""
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
doge = "^3.5.0"
colorama = {version = "^0.4.4", optional = true, platform = "windows"}

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pytest = "^6.2.3"
pytest-randomly = "^3.7.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
